--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,8 +15,8 @@ body {
 #open-popup-button {
     position: fixed;
     z-index: -1;
-    top: 50%;
-    left: 42%;
+    top: 45%;
+    left: 40%;
     display: block;
     border: none;
     border-radius: 6px;
@@ -40,8 +40,8 @@ body {
 #popup-container {
     display: none;
     position: fixed;
-    top: 50%;
-    left: 50%;
+    top: 0;
+    left: 30%;
     z-index: 101;
     background-color: white;
     width: 500px;
@@ -50,8 +50,25 @@ body {
     padding: 50px 80px 50px 80px;
     margin-top: 50px;
     opacity: 0;
-    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
-    transform: translate(-50%, -50%) scale(0.8);
+    transform: scale(0);
+    animation: popup-in 1.2s ease forwards;
+}
+
+@keyframes popup-in {
+    0% {
+        transform: scale(0.2);
+        opacity: 0;
+    }
+    50% {
+        transform: scale(1.05);
+        opacity: 1;
+    }
+    70% {
+        transform: scale(0.95);
+    }
+    100% {
+        transform: scale(1);
+    }
 }
 
 #popup-container.active {
